bug 358073: Kill useless/redundant functions on nsIDOMNSRange. r/sr=jst